tweak mobileMenu to prevent overflow x

--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,1 +1,2 @@
-$primary-color: aqua;
+$primary-color: lightgray;
+$menu-boder-color: white;
